tidy up and added reference in ANOVA, all done

--- a/ANOVA.ipynb
+++ b/ANOVA.ipynb
@@ -5,7 +5,8 @@
    "id": "b33b3e09-4b32-4f24-8734-46d2b04b77a2",
    "metadata": {},
    "source": [
-    "# SciPy stats Notebook"
+    "# SciPy stats Notebook\n",
+    "***"
    ]
   },
   {
@@ -13,8 +14,7 @@
    "id": "244df04b-f91d-41dd-911f-0767aacb65eb",
    "metadata": {},
    "source": [
-    "## Overview of Scipy Stats library\n",
-    "https://docs.scipy.org/doc/scipy/reference/stats.html"
+    "# Overview of Scipy Stats library"
    ]
   },
   {
@@ -22,21 +22,27 @@
    "id": "2cb02ed5-2927-40c9-a36a-1ddd573cd0c9",
    "metadata": {},
    "source": [
-    "This module contains a large number of probability distributions, summary and frequency statistics, correlation functions and statistical tests, masked statistics, kernel density estimation, quasi-Monte Carlo functionality, and more.\n",
-    "1. probability distribution\n",
-    "2. summary statistics\n",
-    "3. frequency statistics\n",
-    "4. Correlation functions\n",
-    "5. Statistical tests"
+    "[Scipy.stats](https://docs.scipy.org/doc/scipy/reference/stats.html) is a module in SciPy dedicated for statistical functions. \n",
+    "\n",
+    "It is divided into 9 parts as follows ...\n",
+    "1. Probability distribution\n",
+    "2. Summary statistics\n",
+    "3. Frequency statistics\n",
+    "4. Correlation functions: f_oneway(*args[, axis]) Perform one-way ANOVA.\n",
+    "5. Statistical tests\n",
+    "6. Masked statistics\n",
+    "7. Other statistical functions\n",
+    "8. Quasi-Monte Carlo functionality\n",
+    "9. Random variate generation"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47a6dcbc-109a-41e7-bcc8-36a550cc39cc",
+   "cell_type": "markdown",
+   "id": "c808ca06",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The module consists of a large number of probability distribution for both continuous and discrete variables, and can work with different types of distributions like the binomial, uniform, and continuous. It also allows user to perform a range of statistical test, for example, T-test, ANOVA, Pearson's r, chi-square test and a lot more. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,14 +52,9 @@
     "# What is ANOVA?\n",
     "ANOVA, which stands for Analysis of Variance, is a statistical test for analyzing if there is statistically significant difference between the means of **three or more groups**. One-way ANOVA is used when there is one independent variable, while a two-way ANOVA is used for two independent variables.\n",
     "\n",
-    "However ANOVA does not tell us which specific groups are significantly different from each other. Post hoc tests are needed to investigate where the significant difference lies. For data that meets the assumption of homogeneity of variances, Tukey's honestly significant difference (HSD) post hoc test would be a great option.  For data with unequal variances, Games Howell post hoc test can be used. \n",
-    "ref:[https://statistics.laerd.com/statistical-guides/one-way-anova-statistical-guide.php]\n",
+    "However ANOVA does not tell us which specific groups are significantly different from each other. Post hoc tests are needed to investigate where the significant difference lies. For data that meets the assumption of homogeneity of variances, Tukey's honestly significant difference (HSD) post hoc test would be a great option.  For data with unequal variances, Games Howell post hoc test can be used [[1]](https://statistics.laerd.com/statistical-guides/one-way-anova-statistical-guide.php). \n",
     "\n",
-    "At the moment Scipy.stats module does not have the function to perform Tukey's HSD post hoc test, statsmodels is one of the modules that allow users to do so. However, SciPy has put it into the development road map, hopefully tukey_hsd will soon be available in its coming release. \n",
-    "\n",
-    "https://www.statsmodels.org/dev/generated/statsmodels.stats.multicomp.pairwise_tukeyhsd.html\n",
-    "\n",
-    "https://scipy.github.io/devdocs/reference/generated/scipy.stats.tukey_hsd.html?highlight=tukey_hsd#scipy.stats.tukey_hsd"
+    "At the moment Scipy.stats module does not have the function to perform Tukey's HSD post hoc test, [statsmodels](https://www.statsmodels.org/dev/generated/statsmodels.stats.multicomp.pairwise_tukeyhsd.html) is one of the modules that allow users to do so. However, SciPy has put it into the development road map, hopefully tukey_hsd will soon be available in its coming release [[2]](https://scipy.github.io/devdocs/reference/generated/scipy.stats.tukey_hsd.html?highlight=tukey_hsd#scipy.stats.tukey_hsd). "
    ]
   },
   {
@@ -61,13 +62,16 @@
    "id": "302ae2cd-5d2a-4cd4-b51b-c18755c8650b",
    "metadata": {},
    "source": [
-    "## The assumption of ANOVA (ref from laerd)\n",
+    "## The assumptions of ANOVA \n",
+    "\n",
+    "According to [Laerd Statistics](https://statistics.laerd.com/spss-tutorials/one-way-anova-using-spss-statistics.php), there are 6 assumptions that the data to be analyzed should meet in order to derive a valid conclusion from the data. \n",
+    "\n",
     "1. Dependent variable at interval or ratio level \n",
-    "2. IV should consist of 2 or more categorical, independent group \n",
-    "3. independence of observations, not repeatedly measures\n",
-    "4. no significant outliers, as outlier reduces validity\n",
-    "5. DV should be approximately normally distributed for each category of IV; shapiro-wilk test of normality\n",
-    "6. homogeneity of variances; Levene's test\n"
+    "2. IV should consist of 2 or more categorical, independent groups\n",
+    "3. Independence of observations, not repeatedly measures\n",
+    "4. No significant outliers, as outlier reduces validity\n",
+    "5. Dependent variable should be approximately normally distributed for each category of independent variable (shapiro-wilk test of normality)\n",
+    "6. homogeneity of variances (Levene's test)\n"
    ]
   },
   {
@@ -84,13 +88,8 @@
    "metadata": {},
    "source": [
     "### The dataset\n",
-    "The dataset is from an imaginary crop yield experiment adopted from [link]. \n",
     "\n",
-    "There are 4 variables in the dataset, planting location (block 1,2,3,4), planting density (1=low, 2=high), types of fertilizer used(type 1,2,3), and crop yield per acre. \n",
-    "\n",
-    "I am interested in if there is statistically significant differences in yield between the 3 types of fertilizer. \n",
-    "\n",
-    "(https://www.scribbr.com/statistics/one-way-anova/)"
+    "The dataset is from an imaginary crop yield experiment adopted from [here](https://www.scribbr.com/statistics/one-way-anova/). There are 4 variables in the dataset, planting location (block 1, 2, 3, 4), planting density (1=low, 2=high), types of fertilizer used(type 1,2,3), and crop yield per acre. I am interested in if there is statistically significant differences in yield of the 3 types of fertilizer. "
    ]
   },
   {
@@ -101,6 +100,14 @@
     "### The hypothesis\n",
     "H0: There is no significant difference between the means between yield of the 3 types of fertilizer. <br>\n",
     "H1: There is significant difference between the means of yield between the 3 types of fertilizer. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a011db1",
+   "metadata": {},
+   "source": [
+    "#### Importing necessary packages"
    ]
   },
   {
@@ -262,7 +269,7 @@
    "id": "ea93a019-3faa-477d-9aab-a49b33e5bfc4",
    "metadata": {},
    "source": [
-    "### Check if the data fits the assumption of ANOVA"
+    "# Check if the data fits the 6 assumptions of ANOVA"
    ]
   },
   {
@@ -311,7 +318,7 @@
    "metadata": {},
    "source": [
     "#### Assumption 2 - Independent variable should consist of 2 or more categorical, independent group\n",
-    "In this case the independent variable is types of fertilizer."
+    "In this case the independent variable is types of fertilizer and there are 3 types."
    ]
   },
   {
@@ -379,9 +386,9 @@
     {
      "data": {
       "text/plain": [
+       "1    32\n",
        "2    32\n",
        "3    32\n",
-       "1    32\n",
        "Name: fertilizer, dtype: int64"
       ]
      },
@@ -474,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2386afbd820>"
+       "<seaborn.axisgrid.FacetGrid at 0x2478f09d700>"
       ]
      },
      "execution_count": 7,
@@ -495,7 +502,8 @@
     }
    ],
    "source": [
-    "#KDEs of the 3 categories\n",
+    "# take a look of the distribution of yield of the 3 types of fertilizer\n",
+    "# KDEs of the 3 categories\n",
     "sns.displot(x=dependent, hue=independent, kind=\"kde\")"
    ]
   },
@@ -570,7 +578,7 @@
    "id": "8398c795-0815-4193-bf7e-c7515ee84085",
    "metadata": {},
    "source": [
-    "If the p-value(2nd one) is smaller than 0.05, that means the data is normally distributed.\n",
+    "If the p-value is smaller than 0.05, that means the data is normally distributed.\n",
     "So yield of all 3 types of fertilizer are actually normally distributed."
    ]
   },
@@ -619,10 +627,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ebcd5de",
+   "metadata": {},
+   "source": [
+    "**Conclusion:** The data meets all the assumptions, we will move on to run ANOVA."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d33f92b-8927-434e-940d-b8910effb411",
    "metadata": {},
    "source": [
-    "## Running ANOVA"
+    "# Running ANOVA"
    ]
   },
   {
@@ -652,7 +668,7 @@
    "id": "45222631-6d82-4269-9960-6bcfa9e68705",
    "metadata": {},
    "source": [
-    "**Conclusion**: the p-value is less than 0.05, meaning the means of yield between the 3 fertilizers used are different. So we reject the null hypothesis. "
+    "**Conclusion**: p-value is less than 0.05, meaning the means of yield between the 3 fertilizers used are different. So we reject the null hypothesis. "
    ]
   },
   {
@@ -663,7 +679,7 @@
     "## Post hoc test\n",
     "\n",
     "While ANOVA tells us that there are significant difference in mean yield between the 3 fertilizers, it did not tell us the specifics of which ones are different from the others. So we need to carry out post hoc test to find out. \n",
-    "As mentioned at the beginning SciPy does not have the function for Tukey_hsd yet, we will use statsmodels module."
+    "As mentioned at the beginning SciPy does not have the function for Tukey_hsd yet, we will use statsmodels package."
    ]
   },
   {
@@ -708,7 +724,11 @@
    "metadata": {},
    "source": [
     "## Reference\n",
-    "***\n"
+    "***\n",
+    "[1] https://docs.scipy.org/doc/scipy/reference/stats.html#correlation-functions <br>\n",
+    "[2] https://statistics.laerd.com/spss-tutorials/one-way-anova-using-spss-statistics.php <br>\n",
+    "[3] https://data-flair.training/blogs/scipy-statistical-functions/ <br>\n",
+    "[4] https://www.statsmodels.org/dev/generated/statsmodels.stats.multicomp.pairwise_tukeyhsd.html <br>"
    ]
   },
   {
@@ -718,14 +738,6 @@
    "source": [
     "# END"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2fdb91c-e100-4a16-9c8e-da7ccd4d0d86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
